# docs/swagger.json
@@ -117,7 +117,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Song"
+                            "$ref": "#/definitions/tools.OK"
                         }
                     },
                     "400": {
@@ -294,7 +294,6 @@
             "type": "object",
             "required": [
                 "group",
-                "releaseDate",
                 "song"
             ],
             "properties": {
@@ -309,8 +308,7 @@
                     "type": "string"
                 },
                 "releaseDate": {
-                    "type": "string",
-                    "minLength": 1
+                    "type": "string"
                 },
                 "song": {
                     "type": "string",
